--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,112 +1,148 @@
 .landing {
-	position: relative;
-	background: url('./assets/landing.jpg') no-repeat center center/cover;
-	height: 100vh;
+  position: relative;
+  background: url("./assets/landing.jpeg") no-repeat center center/cover;
+  height: 100vh;
 }
 
 .dark-overlay {
-	background-color: rgba(0, 0, 0, 0.5);
-	height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
 }
 
 .landing-inner {
-	height: 100%;
-	margin: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .landing-inner form {
-	width: 80%;
+  width: 80%;
 }
 
 .landing-inner h1,
 .landing-inner h4,
 .landing-inner p {
-	color: white;
+  color: white;
 }
 
 .spinner-container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-moz-transform: translateX(-50%) translateY(-50%);
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
 }
 
 /* Post button */
 .post-button {
-	padding-top: 0;
-	background: transparent;
-	border: none;
+  padding-top: 0;
+  background: transparent;
+  border: none;
+  transition: transform 0.3s;
 }
 
 .post-button:hover {
-	background: transparent;
+  background: transparent;
+  transform: scale(1.1);
 }
 
 a.post-button.btn:focus,
 a.post-button.btn:active {
-	outline: none;
-	background: transparent;
-	border: none;
-	box-shadow: none;
+  outline: none;
+  background: transparent;
+  border: none;
+  box-shadow: none;
 }
 
 button.post-button.btn:focus,
 button.post-button.btn:active {
-	outline: none;
-	background: transparent;
-	border: none;
-	box-shadow: none;
+  outline: none;
+  background: transparent;
+  border: none;
+  box-shadow: none;
 }
 
 /* Floating add button */
 .btn-floating {
-	position: fixed;
-	right: 3rem;
-	bottom: 3rem;
-	background: transparent;
-	border: none;
+  position: fixed;
+  right: 3rem;
+  bottom: 3rem;
+  background: transparent;
+  border: none;
 }
 
 .btn-floating:hover {
-	background: transparent;
+  background: transparent;
 }
 
 .btn-floating:focus,
 .btn-floating:active {
-	outline: none;
-	background: transparent;
-	border: none;
-	box-shadow: none;
+  outline: none;
+  background: transparent;
+  border: none;
+  box-shadow: none;
 }
 
 /* Add new post tooltip */
 .tooltip {
-	background: transparent;
+  background: transparent;
 }
 
 .tooltip .arrow::before {
-	border-left-color: #78c2ad;
+  border-left-color: #78c2ad;
 }
 
 .tooltip-inner {
-	background: #78c2ad;
+  background: #78c2ad;
 }
 
 /* Post border thicker */
 .border-success,
 .border-warning,
 .border-danger {
-	border-width: 2px;
+  border-width: 2px;
 }
 
 /* Post title */
 .post-title {
-	margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* .post-description {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+} */
+
+.view-icon {
+  color: green;
+}
+
+/* Masonry Grid */
+.my-masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: -30px; /* gutter size offset */
+  width: auto;
+}
+.my-masonry-grid_column {
+  padding-left: 30px; /* gutter size */
+  background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div {
+  /* change div to reference your elements you put in <Masonry> */
+  margin-bottom: 30px;
 }
