--- a/client/src/App.css
+++ b/client/src/App.css
@@ -117,12 +117,16 @@ button.post-button.btn:active {
   text-overflow: ellipsis;
 }
 
-/* .post-description {
+.post-description {
   width: 100%;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-} */
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
 
 .view-icon {
   color: green;
